--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           npm install
       - name: '运行 【中青看点】'
+        if: env.YOUTH_HEADER
         run: |
           node youth.js
         env:
