--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/xingliuchao/YOUTH.git"
   },
-  "keywords": ["中青"],
+  "keywords": ["中青，浏览赚"],
   "author": "xingliuchao",
   "license": "ISC",
   "bugs": {
